StrategyExporter: Use Stream::toList instead of a Collector.